--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pool:
 steps:
 - script: dotnet restore
 
-- tasks: DotNetCoreCLI@2
+- task: DotNetCoreCLI@2
   displayName: Build
   inputs:
     command: build
