--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,23 @@ steps:
     command: test
     projects: '**/*.csproj'
     arguments: '--configuration Release'
+
+- script: dotnet test OpenWeather.Tests/*.csproj --logger trx --collect "Code coverage"
+- task: PublishTestResults@2
+  displayName: Publish test results
+  condition: succeededOrFailed()
+  inputs:
+    testRunner: VSTest
+    testResultsFiles: '**/*.trx'
+        
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration Release --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+    artifactName: 'myWebsiteName'
