--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,38 +11,22 @@ pool:
   vmImage: 'windows-latest'
 
 steps:
-- script: dotnet restore
+- task: DotNetCoreCLI@2
+  displayName: Restore NuGet packages
+  inputs:
+    command: restore
+    projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
-  displayName: Build
+  displayName: Build projects
   inputs:
     command: build
     projects: '**/*.csproj'
     arguments: '--configuration Release'
 
 - task: DotNetCoreCLI@2
-  displayName: Test
+  displayName: Run test project
   inputs:
     command: test
     projects: '**/*.csproj'
-    arguments: '--configuration Release'
-
-- script: dotnet test OpenWeather.Tests/OpenWeather.Tests.csproj --logger trx --collect "Code coverage"
-- task: PublishTestResults@2
-  displayName: Publish test results
-  condition: succeededOrFailed()
-  inputs:
-    testRunner: VSTest
-    testResultsFiles: '**/*.trx'
-        
-- task: DotNetCoreCLI@2
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration Release --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: True
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
-    artifactName: 'myWebsiteName'
+    arguments: '--configuration Release --collect "Code coverage"'
