Use C#8.0 Version for compilation - enabled Nullable references

--- a/OpenWeather/OpenWeather.csproj
+++ b/OpenWeather/OpenWeather.csproj
@@ -10,6 +10,8 @@
     <RepositoryUrl>https://github.com/Nplu5/OpenWeatherLib</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageTags>OpenWeather, Forecast, Weather</PackageTags>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
