--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ steps:
 
 - task: DotNetCoreCLI@2
   displayName: 'Pack NuGet pakcage for library'
-  iputs:
+  inputs:
     command: pack
     arguments: '--configuration $(buildConfiguration)'
     packagesToPack: '$(libraryProject)'
