--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,13 @@ steps:
     projects: '$(testProject)'
     arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
 
+#- task: NuGetCommand@2
+#  inputs:
+#    command: 'pack'
+#    packagesToPack: '$(libraryProject)'
+#    configuration: '$(buildConfiguration)'
+#    versioningScheme: 'off'
+
 - task: DotNetCoreCLI@2
   displayName: 'Pack NuGet pakcage for library'
   inputs:
@@ -64,7 +71,13 @@ steps:
     packagesToPack: '$(libraryProject)'
     nobuild: true
     versioningScheme: 'off'
-    outputDir: '$(Build.ArtifactStagingDirectory)'
+    outputDir: '$(Pipeline.Workspace)'
+
+- task: PublishPipelineArtifact@1
+  displayName: 'Pugblish Artifacts to pipeline artifacts'
+  inputs:
+    targetPath: '$(Pipeline.Workspace)'
+    artifact: 'drop'
 
 #- task: NuGetCommand@2
 #  displayName: 'Pack NuGet package for library'
