Add class holding the secrets - add class to gitingore

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /OpenWeather/APIKeysLocal.cs
+ConsoleOpenWeatherLib/Secrets.cs
